# log-attributes

./: Cargo.toml  README.md
.github/workflows/: check_and_build.yml
src/: config.rs  fmt_args.rs  fn_processor.rs  lib.rs
tests/fail/: good_code_error_message.rs  good_code_error_message.stderr  incorrect_fmt_string.rs  incorrect_fmt_string.stderr  invalid_log_level.rs  invalid_log_level.stderr  level_macro_with_supplied_level.rs  level_macro_with_supplied_level.stderr  missing_arguments.rs  missing_arguments.stderr  missing_fmt_string.rs  missing_fmt_string.stderr  missing_log_level.rs  missing_log_level.stderr  non_display.rs  non_display.stderr  to_many_arguments.rs  to_many_arguments.stderr  unknown_input.rs  unknown_input.stderr
tests/pass/: log.rs  other_levels.rs
